<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_button">Главная</string>
    <string name="favorite_but">Избранное</string>
    <string name="team_but">Команда</string>
    <string name="search_jobs">Поиск вакансий</string>
    <string name="no_such_vacancies">Таких вакансий нет</string>
    <string name="enter_request">Введите запрос</string>
    <string name="no_internet">Нет интернета</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="couldnt_get_job_list">Не удалось получить\nсписок вакансий</string>
    <string name="filter">фильтр</string>
    <string name="team_screen_title">Над приложением работали</string>
    <string name="first_team_mate">Ильхам Хабибулин</string>
    <string name="second_team_mate">Рустем Мударисов</string>
    <string name="third_team_mate">Рома Гарбуз</string>
    <string name="fourth_team_mate">Егор Макеев</string>
    <string name="fifth_team_mate">Антон Сикора</string>
    <string name="vacancy">Вакансия</string>
    <string name="back_button">Назад</string>
    <string name="experience">Требуемый опыт</string>
    <string name="description_title">Описание вакансии</string>
    <string name="key_skills_title">Ключевые навыки</string>
    <string name="empty_list">Список пуст</string>
    <string name="vacancy_details_no_vacancy_error">Вакансия не найдена или\nудалена</string>
    <string name="vacancy_details_server_error">Ошибка сервера</string>
    <string name="filter_settings">Настройки фильтрации</string>
    <string name="work_place">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="enter_amount">Введите сумму</string>
    <string name="do_not_show_without_salary">Не показывать без зарплаты</string>
    <string name="no_internet_toast">Проверьте подключение к интернету</string>
    <string name="response_error_toast">Произошла ошибка</string>
    <string name="key_skill_mask"><![CDATA[<ul> <li>%1$s.</li>]]></string>
    <string name="choose_country">Выбор страны</string>
    <string name="choose_work_place">Выбор места работы</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>

    <plurals name="plurals_vacancies">
        <item quantity="zero">Найдено %1$d вакансий</item>
        <item quantity="one">Найдена %1$d вакансия</item>
        <item quantity="two">Найдено %1$d вакансии</item>
        <item quantity="few">Найдено %1$d вакансий</item>
        <item quantity="many">Найдено %1$d вакансий</item>
        <item quantity="other">Найдено %1$d вакансий</item>s
    </plurals>

    <string name="industry_selection">Выбор отрасли</string>
    <string name="select">Выбрать</string>
    <string name="submit">Применить</string>
    <string name="clear">Очистить</string>
    <string name="enter_industries">Введите отрасль</string>
    <string name="select_city">Выбор региона</string>
    <string name="enter_city_name">Введите регион</string>
    <string name="no_city_found">Такого региона нет</string>
    <string name="no_industry_found">Такой отрасли нет</string>
    <string name="apply">Применить</string>
    <string name="reset">Сбросить</string>
    <string name="cant_get_cities_list">Не удалось получить список</string>
    <string name="other_regions">Другие регионы</string>
    <string name="work_place_mask">%1$s%2$s</string>
    <string name="job_item_title_mask">%1$s, %2$s</string>
</resources>
