<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/android:windowBackground"
    tools:context=".ui.team.TeamFragment">

    <TextView
        android:id="@+id/team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/team_but"
        android:textColor="?attr/colorOnBackground"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/ys_display_bold"
        android:text="@string/team_screen_title"
        android:textColor="?attr/colorOnBackground"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/team" />

    <TextView
        android:id="@+id/first_team_mate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/first_team_mate"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/team_title"
        app:layout_constraintTop_toBottomOf="@id/team_title" />

    <TextView
        android:id="@+id/second_team_mate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/second_team_mate"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/team_title"
        app:layout_constraintTop_toBottomOf="@id/first_team_mate" />

    <TextView
        android:id="@+id/third_team_mate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/third_team_mate"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/team_title"
        app:layout_constraintTop_toBottomOf="@id/second_team_mate" />

    <TextView
        android:id="@+id/fourth_team_mate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/fourth_team_mate"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/team_title"
        app:layout_constraintTop_toBottomOf="@id/third_team_mate" />

    <TextView
        android:id="@+id/fifth_team_mate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/fifth_team_mate"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/team_title"
        app:layout_constraintTop_toBottomOf="@id/fourth_team_mate" />

</androidx.constraintlayout.widget.ConstraintLayout>
