<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.filtration.FiltrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="4dp"
            android:background="@color/transparent"
            android:src="@drawable/arrow_back_24px" />

        <TextView
            style="@style/textSize22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/filter_settings" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/work_place_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            style="@style/textSize16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/work_place"
            android:textColor="@color/gray" />

        <ImageButton
            android:id="@+id/work_place_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="6dp"
            android:background="@color/transparent"
            android:src="@drawable/arrow_forward_24px" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/industry_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:orientation="horizontal">

        <TextView
            style="@style/textSize16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/industry"
            android:textColor="@color/gray" />

        <ImageButton
            android:id="@+id/industry_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="6dp"
            android:background="@color/transparent"
            android:src="@drawable/arrow_forward_24px" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_bg"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expected_salary"
            android:textColor="@drawable/textinput_selector" />

        <EditText
            android:id="@+id/input_salary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:hint="@string/enter_amount"
            android:inputType="numberDecimal"
            android:textColorHint="?attr/editTextHintColor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            style="@style/textSize16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/do_not_show_without_salary"
            android:textColor="@color/gray" />

        <CheckBox
            android:id="@+id/check_box"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="14dp"
            android:buttonTint="@color/blue" />

    </LinearLayout>
</LinearLayout>
