<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.industry.IndustryFragment"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/arrow_back_24px"
            android:background="@color/transparent"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/industry_selection"
            style="@style/textSize22"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/filter_edit_text"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:autofillHints="@string/enter_industries"
            android:background="@drawable/search_shape"
            android:drawableTint="@color/black_universal"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/enter_industries"
            android:inputType="textCapSentences"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black_universal"
            android:textColorHint="?attr/colorOnSecondary"
            android:textCursorDrawable="@drawable/cursor_color"
            android:theme="@style/ThemeOfSearchEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/clear_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/light_gray"
            android:contentDescription="@string/clear"
            android:src="@drawable/search_24px"
            app:layout_constraintBottom_toBottomOf="@+id/filter_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/filter_edit_text"
            app:layout_constraintTop_toTopOf="@+id/filter_edit_text"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </RadioGroup>
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/select_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="12dp"
        android:layout_marginBottom="24dp"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            style="@style/textSize16"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:paddingHorizontal="8dp"
            android:paddingVertical="20dp"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>
