<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.region.SelectRegionFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/arrow_back_24px"
            android:background="@color/transparent"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_work_place"
            style="@style/textSize22"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/country_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/country"
            style="@style/textSize16"
            android:textColor="@color/gray"
            android:layout_marginStart="12dp"
            android:layout_gravity="center_vertical"
            android:gravity="start"/>

        <ImageButton
            android:id="@+id/country_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/arrow_forward_24px"
            android:background="@color/transparent"
            android:layout_marginVertical="6dp"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/region_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/region"
            style="@style/textSize16"
            android:textColor="@color/gray"
            android:layout_marginStart="12dp"
            android:layout_gravity="center_vertical"
            android:gravity="start"/>

        <ImageButton
            android:id="@+id/button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/arrow_forward_24px"
            android:background="@color/transparent"
            android:layout_marginVertical="6dp"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/select_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="12dp"
        android:layout_marginBottom="24dp"
        android:visibility="visible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            style="@style/textSize16"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:paddingHorizontal="8dp"
            android:paddingVertical="20dp"/>
    </androidx.cardview.widget.CardView>
</LinearLayout>

