<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="?attr/android:windowBackground"
    android:orientation="vertical"
    tools:context=".ui.search.SearchJobFragment">

    <TextView
        android:id="@+id/toolbar_text"
        style="@style/textSize22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:text="@string/search_jobs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/filter_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/transparent"
        android:contentDescription="@string/filter"
        android:src="@drawable/trailing_icon_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:autofillHints="@string/enter_request"
        android:background="@drawable/search_shape"
        android:drawableTint="@color/black_universal"
        android:fontFamily="@font/ys_display_regular"
        android:hint="@string/enter_request"
        android:inputType="textCapSentences"
        android:paddingHorizontal="16dp"
        android:textColor="@color/black_universal"
        android:textColorHint="?attr/colorOnSecondary"
        android:textCursorDrawable="@drawable/cursor_color"
        android:theme="@style/ThemeOfSearchEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_image_button" />

    <ImageView
        android:id="@+id/clear_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/light_gray"
        android:src="@drawable/search_24px"
        app:layout_constraintBottom_toBottomOf="@+id/search_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/search_edit_text"
        app:layout_constraintTop_toTopOf="@+id/search_edit_text" />

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/search_jobs"
            android:src="@drawable/search_screen_placeholder" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/error_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/no_internet"
            android:src="@drawable/no_internet_placeholder" />

        <TextView
            android:id="@+id/error_tv"
            style="@style/textSize22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/no_internet" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_jobs_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/couldnt_get_job_list"
            android:src="@drawable/nothing_found_placeholder" />

        <TextView
            style="@style/textSize22"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/couldnt_get_job_list" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="?attr/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/message_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimary"
        android:fontFamily="@font/ys_display_regular"
        android:text="Текст"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_edit_text"
        tools:ignore="HardcodedText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vacancies_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/bottom_progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message_chip"
        tools:listitem="@layout/job_item" />

    <ProgressBar
        android:id="@+id/bottom_progressBar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginVertical="16dp"
        android:indeterminateTint="?attr/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vacancies_recycler_view" />
</androidx.constraintlayout.widget.ConstraintLayout>
